--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-files": "^2.4.9",
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
+    "sha1-uint8array": "^0.10.3",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
