Added file2qr to python package

--- a/python-client/setup.cfg
+++ b/python-client/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = qr_to_file
-version = 0.0.1
+version = 0.0.2
 author = six-two
 author_email = pip@six-two.dev
-description = Client for the react-file2qr web application
+description = Tools for sending and receiving a file via QR codes
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/six-two/react-file2qr
@@ -32,3 +32,4 @@ where = src
 [options.entry_points]
 console_scripts =
     qr2file = qr_to_file.main:main
+    file2qr = file_to_qr.main:main
