Added option to read images from webcam

--- a/python-sender-and-receiver/setup.cfg
+++ b/python-sender-and-receiver/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = file2qr
-version = 0.0.2
+version = 0.0.3
 author = six-two
 author_email = pip@six-two.dev
 description = Tools for sending and receiving a file via QR codes
@@ -24,6 +24,7 @@ python_requires = >=3.9
 install_requires =
     Pillow
     pyzbar
+    python-opencv
 
 [options.packages.find]
 where = src
